--- a/react/lib/jb-grid.css
+++ b/react/lib/jb-grid.css
@@ -1,6 +1,9 @@
-//responsive definition
-@use './constants' as *;
+/* responsive definition */
+@custom-media --tablet-until (max-width: 768px);
 
+:host{
+    --base-grid-row-color:#f9f9f9
+}
 .jb-grid-wrapper {
     width: 100%;
     height: 100%;
@@ -19,7 +22,6 @@
     }
     .jb-grid-header {
         background-color: #fff;
-        //border-bottom: 3px solid #2dadc1;
         grid-column-start: 1;
         grid-column-end: end;
         grid-row-start: 1;
@@ -94,7 +96,7 @@
     }
     .jb-grid-content {
         display: block;
-        //56*2=112
+        /* 56*2=112 */
         height: 100%;
         position: relative;
         border-radius: 0 0 24px 24px;
@@ -123,7 +125,7 @@
             height: 32px;
             background-color: #f0f4f7;
             overflow: hidden;
-            @include tablet {
+            @media(--tablet-until) {
                 display: none;
             }
             .table-header-wrapper {
@@ -166,14 +168,14 @@
             background-color: #fff;
             overflow-y: scroll;
             height: calc(100% - 32px);
-            @include tablet {
+            @media(--tablet-until) {
                 height: 100%;
-                background: $BaseGridRowColor;
+                background: var(--base-grid-row-color);
             }
             &::-webkit-scrollbar {
                 width: 9px;
                 background-color: transparent;
-                @include tablet {
+                @media(--tablet-until) {
                     width: 0px;
                 }
             }
@@ -186,7 +188,7 @@
                 height: 100%;
                 width: 100%;
                 max-height: 100%;
-                @include tablet{
+                @media(--tablet-until) {
                     display: grid;
                     grid-template-columns: 1fr;
                     gap:0.5rem;
